--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="link">
                 <div class="text">
                     <p style="font-weight: bold;">	&#128722; Loja do Elfo</p>
-                    <p style="margin-top: 14px; font-size: 14px;">Aqui você vai encontrar as maiores tendencia. &#128156;</p>
+                    <p style="margin-top: 14px; font-size: 14px;">Aqui você encontra as melhores tendencia. &#128156;</p>
                 </div>
             </div>
 
